--- a/src/Class001/tadingday/package.json
+++ b/src/Class001/tadingday/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":  "nodemon ./src/index.js --watch ../"
+    "dev": "nodemon ./src/003-tadingday-server.js --watch ../"
   },
   "keywords": [],
   "author": "",
