--- a/src/Class001/tadingday/package.json
+++ b/src/Class001/tadingday/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev003": "nodemon ./src/003-tadingday-server.js --watch ./",
-    "dev004": "nodemon ./src/004-tadingday-server-and-sqlite --watch ./"
+    "dev004": "concurrently  'nodemon ./src/004-tadingday-server-and-sqlite.js --watch ./' 'wait-on tcp:3000 && opener http://localhost:3000/tadingday'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^7.4.5",
-    "express": "^4.17.1"
+    "concurrently": "^6.4.0",
+    "express": "^4.17.1",
+    "opener": "^1.5.2",
+    "wait-on": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
